(view entries) prototype

--- a/view_entries.html
+++ b/view_entries.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>View entries</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,6 +46,244 @@
 
     <div class="container">
     <!-- Entries -->
+<!-- 1 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /1 -->
+<!-- 2 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /2 -->
+<!-- 3 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /3 -->
+<!-- 4 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /4 -->
+<!-- 5 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /5 -->
+<!-- 6 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /6 -->
+<!-- 7 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /7 -->
+<!-- 8 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /8 -->
+<!-- 9 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href="#" title="Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     ">
+           And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.
+          </a>
+        </div>
+      </div>
+    </div>
+<!-- /9 -->
+<!-- 10 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /10 -->
+<!-- 11 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /11 -->
+<!-- 12 -->
+    <div style="border: 1px solid #E3E3E3; border-radius: 4px;">
+      <div style="display: table-row">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-default" title="05.12.2014 16:34">05.12.2014</span>
+        </div>
+        <div style="display: table-cell; padding: 3px;">
+          <a href=#>And aaaaaaaiiiiiiiiiiiii will always. Looooove youuuuuouououououuououououou.</a>
+        </div>
+      </div>
+      <div style="display: block; padding: 0px 3px;">
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+         Somewhere, deep in the jungle are living some little men and women. They are our past, and maybe, maybe they are our future...     
+      </div>
+      <div style="display: table-row;">
+        <div style="display: table-cell; padding: 3px;">
+          <span class="label label-info"><a href="#">me</a></span>
+          <span class="label label-info"><a href="#">weird</a></span>
+          <span class="label label-info"><a href="#">love</a></span>
+          <span class="label label-info"><a href="#">she</a></span>
+        </div>
+      </div>
+    </div>
+<!-- /12 -->
+
 
     <!-- / Entries -->
     </div> <!-- /container -->
@@ -86,7 +324,7 @@
         </span>
         <button type="submit" class="btn btn-default">Show per page</button>
         <div class="form-group">
-          <input type="text" placeholder="50" class="form-control">
+          <input type="text" placeholder="50" class="form-control" style="width: 60px;">
         </div>
         </form>
         </div>
