--- a/view_entries.html
+++ b/view_entries.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">icchi</a>
+          <a class="navbar-brand" href="#">custom</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -291,8 +291,8 @@
     <!-- Pagination -->
     <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
       <div style="margin-top: 10px; margin-bottom: 10px;">
-        <div class="center-block-icchi">
-        <ul class="pagination inline-icchi">
+        <div class="center-block-custom">
+        <ul class="pagination inline-custom">
            <li class="disabled"><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
            <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
            <li><a href="#">2</a></li>
